crates/api/tests/snapshots/wire_snapshots__relation_submit_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RelationSubmitReq\n{\n    name: \"ptr\".into(), kind: \"sibling\".into(), from: \"samus_aran\".into(), to:\n    \"character:samus\".into(), op: \"add\".into(),\n}"
---
{
  "name": "ptr",
  "kind": "sibling",
  "from": "samus_aran",
  "to": "character:samus",
  "op": "add"
}
