crates/api/tests/snapshots/wire_snapshots__relation_tag_dto.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RelationTagDto { tag: \"samus_aran\".into(), count: 7 }"
---
{
  "tag": "samus_aran",
  "count": 7
}
