crates/api/tests/snapshots/wire_snapshots__relations_import_summary.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RelationsImportSummary { siblings: 2, parents: 1 }"
---
{
  "siblings": 2,
  "parents": 1
}
