crates/api/tests/snapshots/wire_snapshots__repo_priority_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RepoPriorityReq { name: \"ptr\".into(), priority: 2 }"
---
{
  "name": "ptr",
  "priority": 2
}
