crates/api/tests/snapshots/wire_snapshots__repo_pull_req.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RepoPullReq { name: \"ptr\".into() }"
---
{
  "name": "ptr"
}
