crates/api/tests/snapshots/wire_snapshots__repo_pull_summary.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RepoPullSummary { matched_files: 3, mappings: 7, notice: None, }"
---
{
  "matched_files": 3,
  "mappings": 7
}
