crates/api/tests/snapshots/wire_snapshots__repo_pull_summary_with_notice.snap
---
source: crates/api/tests/wire_snapshots.rs
expression: "RepoPullSummary { matched_files: 3, mappings: 7, notice: Some(\"repo ptr: privacy ceiling below floor; querying at 16 bits\".into()), }"
---
{
  "matched_files": 3,
  "mappings": 7,
  "notice": "repo ptr: privacy ceiling below floor; querying at 16 bits"
}
